# surgery_perception

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  calibration.ini  calibration.yml  docker-compose.yml  multi_embedded_s.launch  package.xml
camera_info/: rgb_Astra_Orbbec.yaml
docker/: calibrate-depth-compose.yml  calibrate-rgb-compose.yml
launch/: static_transform.launch
scripts/: o3d_conversions.py  poisson_reconstruction.py
src/: global_registration.cpp  perception_node.cpp  pointcloud_to_mesh.cpp  poisson_reconstruction.cpp
surgery_reconstruction/: CMakeLists.txt  package.xml
surgery_reconstruction/scripts/: initial_registration.py
surgery_reconstruction/src/: lvr2_reconstruction.cpp  poisson_reconstruction.cpp  static_registration.cpp
