<?xml version="1.0"?>
<package format="2">
  <name>surgery_perception</name>
  <version>0.0.0</version>
  <description>The surgery_perception package</description>

  <maintainer email="canezdiego@gmail.com">dgcnz</maintainer>


  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>open3d_conversions</depend>
  <depend>eigen</depend>
  <depend>roslaunch</depend>
  <export>
  </export>
</package>
